Add signUp endpoint for shoppers
