# models/sign_up_shopper_request.go
@@ -1,0 +1,103 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// SignUpShopperRequest sign up shopper request
+//
+// swagger:model SignUpShopperRequest
+type SignUpShopperRequest struct {
+
+	// email
+	// Format: email
+	Email strfmt.Email `json:"email,omitempty"`
+
+	// first name
+	FirstName string `json:"firstName,omitempty"`
+
+	// last name
+	LastName string `json:"lastName,omitempty"`
+
+	// password
+	// Min Length: 8
+	Password string `json:"password,omitempty"`
+
+	// role
+	Role *string `json:"role,omitempty"`
+}
+
+// Validate validates this sign up shopper request
+func (m *SignUpShopperRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateEmail(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validatePassword(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *SignUpShopperRequest) validateEmail(formats strfmt.Registry) error {
+	if swag.IsZero(m.Email) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("email", "body", "email", m.Email.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *SignUpShopperRequest) validatePassword(formats strfmt.Registry) error {
+	if swag.IsZero(m.Password) { // not required
+		return nil
+	}
+
+	if err := validate.MinLength("password", "body", m.Password, 8); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this sign up shopper request based on context it is used
+func (m *SignUpShopperRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *SignUpShopperRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *SignUpShopperRequest) UnmarshalBinary(b []byte) error {
+	var res SignUpShopperRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
